...
    <string name="alerts">alerts</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="password">Password</string>
    <string name="action_sign_in">Log in</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
...
    <string name="categorias">Categorías</string>
    <string name="novedades_frase">Últimas películas añadidas</string>
    <string name="comedia">Comedia</string>
    <string name="actores">Descubre más sobre los actores</string>
    <string name="terror">Terror</string>
    <string name="img_popular">img_popular</string>
    <string name="img_new">TODO</string>
    <string name="img_category">img_category</string>
    <string name="drama">Drama</string>
    <string name="descubre_">Descubre</string>
    <string name="title_profile">title_profile</string>
    <string name="username">Raul Velázquez</string>
    <string name="quot_user">Soy aficionado al cine del género de ciencia ficción, me encanta Matriz</string>
    <string name="movie_title">Blade Runner</string>
...
    <string name="icon_info">TODO</string>
    <string name="img_post1">img_post</string>
    <string name="img_1">img_1</string>
    <string name="img_post5">img_post5</string>
    <string name="img_post3">img_post3</string>
    <string name="icon_comment">icon_comment</string>
    <string name="button_info">button_info</string>
    <string name="todo">TODO</string>
    <string name="todo1">TODO1</string>
    <string name="le_do">Leído</string>
    <string name="mensaje">Mensaje...</string>
    <string name="icon_sendMessage">icon_sendMessage</string>
    <string name="icon_addfile">icon_addFile</string>
    <string name="icon_reply">icon_reply</string>
    <string name="icon_reply0">icon_reply0</string>
    <string name="icon_comment2">icondfdsf</string>
    <string name="register">Register New Account</string>
    <string name="registerShort">Register</string>
    <string name="user">User</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="ciudad">Ciudad</string>
    <string name="interactua">Interactúa</string>
    <string name="descubreForos">Descubre los foros que más gustan</string>
    <string name="novedades">Novedades</string>
    <string name="foro">Foro</string>
    <string name="_13">13</string>
    <string name="lorem_ipsum">Lorem ipsum nosequantorum porquorum latin is antiquorum, i pesque indefinidus il textus est, nus adentrus in peliculus mes plus mes</string>
    <string name="descripcion">Descripción</string>
    <string name="_21">21</string>
    <string name="silvester_stallone">Silvester Stallone</string>
    <string name="quentin_tarantino">Quentin Tarantino</string>
...
    <string name="director2">Director</string>
    <string name="actores2">Actores</string>
    <string name="estrellas">estrellas</string>
    <string name="imagen">imagen</string>
    <string name="fecha">fecha</string>
    <string name="comentario">comentario</string>
    <string name="boton">boton</string>
    <string name="responde_a_este_comentario">Responde a este comentario</string>
    <string name="texto">Texto:</string>
    <!--<string name="foro">Foro</string>-->
    <string name="nuevo_mensaje_de">Nuevo mensaje de </string>
    <string name="textview">TextView</string>
    <string name="categoria">Categoría</string>
...
