<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:design="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/layout_postBox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:background="@drawable/indivdual_box"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_User"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgUser"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:adjustViewBounds="false"
                android:contentDescription="@string/imagen"
                android:cropToPadding="false"
                android:scaleType="fitXY"
                android:src="@drawable/imguser"/>

            <LinearLayout
                android:id="@+id/layout_datosUser"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/nombre"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="NestedWeights" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fecha"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvComent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:maxLines="4"
            android:maxLength="180"
            android:layout_weight="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:text="@string/comentario"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="120dp"
            android:id="@+id/layout_botones"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="220dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btReply"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/boton"
                android:background="#ffffff"
                android:src="@drawable/ic_reply" />

            <TextView
                android:id="@+id/tvAnswer"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/responde_a_este_comentario"
                android:textAlignment="center"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_acordeon"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/tvEscribir"
                android:layout_width="60dp"
                android:layout_height="30dp"
                android:background="@color/colorBlanco"
                android:paddingStart="6dp"
                android:paddingTop="6dp"
                android:text="@string/texto" />

            <AutoCompleteTextView
                android:id="@+id/input_messageReply"
                android:layout_width="240dp"
                android:layout_height="35dp"
                android:background="@drawable/botton_style"
                android:fontFamily="sans-serif"
                android:hint="@string/mensaje"
                android:minHeight="30dp"
                android:maxLength="180"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/background2"
                android:textColorHighlight="@android:color/transparent"
                android:textColorLink="@color/foroButton"
                android:textCursorDrawable="@color/foroButton" />

            <ImageButton
                android:id="@+id/btSendReply"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:paddingStart="6dp"
                android:background="@color/colorBlanco"
                android:contentDescription="@string/icon_sendMessage"
                android:src="@android:drawable/ic_menu_send" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>