...
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:clipChildren="false">


                <LinearLayout
                    android:id="@+id/scroll_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/layout_drama"
...
                            android:textAllCaps="false"
                            android:textColor="#505254" />
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/layout_comedy"
                        android:layout_width="120dp"
                        android:layout_height="190dp"
                        android:orientation="vertical">


                        <ImageView
                            android:id="@+id/img_comedy"
                            android:layout_width="120dp"
                            android:layout_height="160dp"
                            android:contentDescription="@string/img_category"
                            android:maxHeight="160dp"
                            android:maxWidth="120dp"
                            android:minHeight="160dp"
...
